--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 <h1>🤖 AI English Bot</h1>
                 <p class="subtitle">Персональный ИИ-тренер английского прямо в Telegram<br>
                 Уникальные фразы • Детальный анализ • Никаких повторов</p>
-                <a href="https://t.me/your_bot_username" class="cta-button pulse">
+                <a href="https://t.me/English_translate_checker_bot" class="cta-button pulse">
                     📱 Начать изучение
                     <span style="font-size: 1.5em;">→</span>
                 </a>
@@ -504,7 +504,7 @@
         <div class="container">
             <h2>🎯 Начните изучение прямо сейчас!</h2>
             <p>Присоединяйтесь к сотням пользователей, которые уже улучшают свой английский с помощью ИИ</p>
-            <a href="https://t.me/your_bot_username" class="cta-button pulse">
+            <a href="https://t.me/@English_translate_checker_bot" class="cta-button pulse">
                 🚀 Запустить бота в Telegram
             </a>
             <br><br>
